--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,5 +1,5 @@
 .first-main{
-    min-height: 100vh; 
+    min-height: 100dvh; 
     display: flex;
     justify-content: center;
     align-items: center;
