--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 body{
     background-image: linear-gradient(to bottom, black , rgb(27, 26, 26));
-    height: 100%;
+    width: 100%;
+}
+html{
+    font-size: 16px;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
