--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,12 @@
     padding: 15px 6px;
     display: flex;
 }
+
+@media (max-width: 395px){
+    .boxs-root{
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 100vh;
+    }
+}
