--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -27,3 +27,10 @@
         height: 120px;
     }
 }
+
+@media (max-width: 395px){
+    .box-main{
+        width: 150px;
+        height: 150px;
+    }
+}
