--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,11 +30,17 @@
 }
 
 .header-nav > ul{
-    width: 30%;
+    width: 50%;
     display: flex;
     justify-content: space-between;
     list-style: none;
 }
 .logo-header{
     font-size: x-large;
+}
+
+@media (max-width: 660px){
+    .header-nav > ul {
+        display: none;
+    }
 }
