--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,15 +1,17 @@
 .input-main {
   position: relative;
-  height: 40px;
-  width: 250px;
+  height: 30px;
+  width: 150px;
 }
 
 .text-input {
   width: 100%;
   height: 100%;
-  padding: 0 40px 0 12px; /* espaço para o ícone */
+  padding: 0 40px 0 12px; 
   border-radius: 20px;
   box-sizing: border-box;
+  background-color:rgba(255,255,255,0.05);
+  color: white;
 }
 
 .search-logo {
@@ -17,7 +19,7 @@
   top: 50%;
   right: 10px;
 
-  transform: translateY(-50%); /* centraliza verticalmente */
+  transform: translateY(-50%); 
 
   width: 24px;
   height: 24px;
@@ -26,5 +28,5 @@
   align-items: center;
   justify-content: center;
 
-  pointer-events: none; /* não bloqueia clique no input */
+  pointer-events: none; 
 }
