fix(landingpage): add carousel

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .boxs-root{
+    padding-top: 100px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 90%;
     margin: 0 auto;
 }
