--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+    --base-color : #1c73be;
+}
 body{
     background-image: linear-gradient(to bottom, #000000 , rgb(12, 12, 12));
     width: 100%;
